fix z-index for popup

--- a/src/components/Popup.scss
+++ b/src/components/Popup.scss
@@ -1,5 +1,6 @@
 .popup {
 	position: fixed;
+	z-index: 100;
 	top: 10%;
 	left: 10%;
 	width: 80%;
